--- a/index.html
+++ b/index.html
@@ -90,6 +90,7 @@
                 <h3 class="title">Projects</h3>
 
                 <ul class="projects-all">
+                    <li class="item"><a href="https://skorohodandrew.github.io/goit-markup-hw-08/">WebStudio</a></li>
                     <li class="item"><a href="https://cheekygeroin.github.io/ice-cream-project/">IceCream</a></li>
                     <li class="item"><a href="https://tanetti.github.io/filmoteka/">Filmoteka</a>
                     </li>
