--- a/index.html
+++ b/index.html
@@ -74,9 +74,10 @@
         <!-- about main container-->
         <div class="about-me-container">
             <!-- about me main ifo-->
-            <div>
+            <div class="about">
                 <h2 class="title">Front-End Developer</h2>
                 <h1 class="name">Andrew Skorokhod</h1>
+                <h3 class="title">Summary</h3>
 
                 <p class="about-me-text">I am a Front-End developer looking for a full-time position in a
                     company that's aimed at making both everyday life and business
@@ -86,8 +87,8 @@
             </div>
 
             <!-- project container-->
-            <div>
-                <h3 class="title">Projects</h3>
+            <div class="project-container">
+                <h3 class="title">Projects Experience</h3>
 
                 <ul class="projects-all">
                     <li class="item"><a href="https://skorohodandrew.github.io/goit-markup-hw-08/">WebStudio</a></li>
@@ -98,14 +99,14 @@
             </div>
 
             <!--work experience container-->
-            <div>
+            <div class="work-experience">
                 <h3 class="title">Work Experience</h3>
 
                 <span>None</span>
             </div>
 
-            <!-- Education -->
-            <div>
+            <!-- education -->
+            <div class="education">
                 <h3 class="title">Education</h3>
                 <ul class="education-list">
                     <li>
